--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,5 +69,6 @@ dependencies {
     implementation "androidx.constraintlayout:constraintlayout-compose:1.0.1"
     // Import the Firebase BoM
     implementation(platform("com.google.firebase:firebase-bom:32.7.0"))
+    implementation'com.google.firebase:firebase-firestore-ktx'
 
 }
